removed Neuron, improved download process