@@ -1,5 +1,6 @@
 package chiralsoftware.netfromscratch;
 
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -8,45 +9,37 @@ import java.util.List;
 final class Batch {
     
     private final List<Sample> samples;
-    private final Layer layer;
+    private final ArrayList<Layer> layers;
 
-    Batch(List<Sample> samples, Layer layer) {
+    Batch(List<Sample> samples, ArrayList<Layer> layers) {
         this.samples = samples;
-        this.layer = layer;
+        this.layers = layers;
     }
     
     float process() {
-        final float[][] accumulatedWeightGradients = 
-                new float[layer.neurons.length][samples.getFirst().x().length];
-        final float[] accumulatedBiasGradients = new float[layer.neurons.length];
-
-        float accumulatedLoss = 0;
-        for(Sample s : samples) {
-            final float[] prediction = layer.forward(s.x());
-            // add in a computeLoss here so we can watch the loss
-            final float[] delta = layer.computeGradient(prediction, s.target());
-            for(int i = 0; i < layer.neurons.length; i++) {
-                for(int j = 0; j < s.x().length; j++) {
-                    accumulatedWeightGradients[i][j] += delta[i] * s.x()[j];
+        final Layer layer = layers.get(0); // only one layer for now
+        final float[][] weightGradSum = new float[layer.outputSize][layer.inputSize];
+        final float[] biasGradSum = new float[layer.outputSize];
+        float loss = 0;
+        for(int sampleIndex = 0; sampleIndex < samples.size(); sampleIndex++) {
+            final Sample sample = samples.get(sampleIndex);
+            final float[] grad = layer.gradient(sample.x(), sample.target());
+            loss += layer.loss(sample.x(), sample.target());
+            for (int i = 0; i < layer.outputSize; i++) {
+                for (int j = 0; j < layer.inputSize; j++) {
+                    weightGradSum[i][j] += grad[i] * sample.x()[j];
                 }
-                accumulatedBiasGradients[i] += delta[i]; 
+                biasGradSum[i] += grad[i];
             }
-            accumulatedLoss += layer.computeLoss(prediction, s.target());
-        }
-        
-        for(int i = 0 ;i < layer.neurons.length; i++) {
-            for(int j= 0; j < accumulatedWeightGradients[i].length; j++)  {
-                accumulatedWeightGradients[i][j] /= samples.size();
-            }
-            accumulatedBiasGradients[i] /= samples.size();                
         }
 
-        accumulatedLoss /= samples.size();
-        // now we have the accumulated gradient - adjust 
-        for (int i = 0; i < layer.neurons.length; i++) {
-            layer.neurons[i].adjust(accumulatedWeightGradients[i], accumulatedBiasGradients[i]);
+        for (int i = 0; i < layer.outputSize; i++) {
+            for (int j = 0; j < layer.inputSize; j++) {
+                layer.weights[i][j] -= Network.learningRate * weightGradSum[i][j] / samples.size();
+            }
+            layer.biases[i] -= Network.learningRate * biasGradSum[i] / samples.size();
         }
-        return accumulatedLoss;
+        return loss / samples.size();
     }
     
 }
